--- a/compose.yml
+++ b/compose.yml
@@ -79,6 +79,18 @@ services:
       - 8989:8989
     restart: unless-stopped
 
+
+  flaresolverr:
+    image: flaresolverr/flaresolverr
+    container_name: flaresolverr
+    networks:
+      - torrent_network
+    ports:
+      - 8191:8191
+    environment:
+      - LOG_LEVEL=info
+    restart: unless-stopped
+
   protonvpn:
     image: qmcgaw/gluetun
     container_name: protonvpn
