--- a/compose.yml
+++ b/compose.yml
@@ -81,7 +81,7 @@ services:
 
 
   flaresolverr:
-    image: flaresolverr/flaresolverr
+    image: flaresolverr/flaresolverr:latest
     container_name: flaresolverr
     networks:
       - torrent_network
@@ -89,6 +89,9 @@ services:
       - 8191:8191
     environment:
       - LOG_LEVEL=info
+      - LOG_HTML=${LOG_HTML:-false}
+      - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
+      - TZ=Etc/UTC
     restart: unless-stopped
 
   protonvpn:
