updated README.md and added systemd file

--- a/compose.service
+++ b/compose.service
@@ -1,1 +1,16 @@
-/etc/systemd/system/compose.service
+
+[Unit]
+Description="starts docker containers"
+Requires=docker.service
+After=network.target,docker.service
+
+[Service]
+Type=simple 
+RemainAfterExit=true
+WorkingDirectory=/root/docker-media-server
+ExecStart=/usr/bin/docker compose up 
+ExecStop=/usr/bin/docker compose down
+TimeoutStartSec=0
+Restart=always
+[Install]
+WantedBy=multi-user.target
